# github-collector

./: .gitignore  github_collector.py  pyproject.toml
